--- a/nextflow.config
+++ b/nextflow.config
@@ -120,13 +120,14 @@ profiles {
   }
   test_fastq { includeConfig 'conf/test_fastq.config' }
   test_bam { includeConfig 'conf/test_bam.config' }
+  test_diff_hash { includeConfig 'conf/test_diff_hash.config' }
+  test_diff_hash_abundance { includeConfig 'conf/test_diff_hash_abundance.config' }
+  test_diff_hash_sourmash { includeConfig 'conf/test_diff_hash_sourmash.config' }
   test_download_refseq { includeConfig 'conf/test_download_refseq.config' }
   test_existing_database { includeConfig 'conf/test_existing_database.config' }
   test_hash2kmer { includeConfig 'conf/test_hash2kmer.config' }
   test_input_is_protein { includeConfig 'conf/test_input_is_protein.config' }
-  test_diff_hash { includeConfig 'conf/test_diff_hash.config' }
   test_sourmash_search { includeConfig 'conf/test_sourmash_search.config' }
-  test_diff_hash_sourmash { includeConfig 'conf/test_diff_hash_sourmash.config' }
 }
 
 // Load igenomes.config if required
