--- a/environment.yml
+++ b/environment.yml
@@ -33,5 +33,6 @@ dependencies:
   - conda-forge::rsync=3.1.3
   - subread=1.6.4
   - bioawk=1.0
+  - conda-forge::ripgrep=12.0.1
   - pip:
     - git+https://github.com/czbiohub/kh-tools.git@master#egg=khtools
