--- a/conf/test_diff_hash_abundance.config
+++ b/conf/test_diff_hash_abundance.config
@@ -27,7 +27,6 @@ params {
   diff_hash_penalty = 'l1'
   diff_hash_with_abundance = true
 
-  // "Other" is the smallest refseq release: ftp://ftp.ncbi.nlm.nih.gov/refseq/release/other/
-  // Protein fasta is 453 B
-  diamond_database = 'https://github.com/czbiohub/test-datasets/raw/predictorthologs/reference/ncbi_refseq_vertebrate_mammalian_ptprc_db.dmnd'
+  // Use pre-made diamond database to save time
+  diamond_database = 'https://github.com/czbiohub/test-datasets/raw/olgabot/predictorthologs--diffhash-sourmash/reference/ncbi_refseq_vertebrate_mammalian_ptprc_plus__np_only_db.dmnd'
 }
