--- a/conf/test_diff_hash_featurecounts.config
+++ b/conf/test_diff_hash_featurecounts.config
@@ -16,8 +16,6 @@ params {
   max_time = 48.h
   // Input data
   csv = 'https://github.com/czbiohub/test-datasets/raw/olgabot/predictorthologs--orthology-featurecounts/testdata/samples__hashes_in_bams_featurecounts_orthology.csv'
-  hash2kmer_molecule = 'dayhoff'
-  hash2kmer_ksize = 45
   input_is_protein = true
 
   // Differential hash expression options
@@ -26,11 +24,13 @@ params {
   diff_hash_solver = 'liblinear'  // Use simpler model for testing
   diff_hash_penalty = 'l1'
 
+  // sourmash parameters
+  sourmash_molecule = 'dayhoff'
+  sourmash_ksize = 45
+
   // Featurecounts orthology options
   do_featurecounts_orthology = true
 
-  diamond_protein_fasta = false
-  // "Other" is the smallest refseq release: ftp://ftp.ncbi.nlm.nih.gov/refseq/release/other/
   // Protein fasta is 453 B
   diamond_database = 'https://github.com/czbiohub/test-datasets/raw/predictorthologs/reference/ncbi_refseq_vertebrate_mammalian_ptprc_db.dmnd'
 }
