--- a/conf/test_diff_hash_is_aligned.config
+++ b/conf/test_diff_hash_is_aligned.config
@@ -31,8 +31,8 @@ params {
   sourmash_ksize = 45
   sourmash_log2_sketch_size = 14
 
-  // Featurecounts orthology options
-  do_featurecounts_orthology = true
+  // CSV has aligned/unaligned signatures
+  csv_has_is_aligned = true
 
   proteome_search_fasta = 'https://github.com/czbiohub/test-datasets/raw/predictorthologs/reference/ncbi_refseq_vertebrate_mammalian_ptprc_plus__np_only.fasta'
   // diamond_database = 'https://github.com/czbiohub/test-datasets/raw/predictorthologs/reference/ncbi_refseq_vertebrate_mammalian_ptprc_db.dmnd'
