--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,11 +24,11 @@ jobs:
       - name: Pull docker image
         run: |
           docker pull czbiohub/predictorthologs:dev && docker tag czbiohub/predictorthologs:dev czbiohub/predictorthologs:dev
-      # - name: Run pipeline with test data (single-end fastq input)
-      #   run: |
-      #     # TODO nf-core: You can customise CI pipeline run tests as required
-      #     # (eg. adding multiple test runs with different parameters)
-      #     ${NXF_RUN} ${GITHUB_WORKSPACE} -profile test_fastq,docker
+      - name: Run pipeline with test data (single-end fastq input)
+        run: |
+          # TODO nf-core: You can customise CI pipeline run tests as required
+          # (eg. adding multiple test runs with different parameters)
+          ${NXF_RUN} ${GITHUB_WORKSPACE} -profile test_fastq,docker
       # - name: Test downloading refseq
       #   run: |
       #     # TODO nf-core: You can customise CI pipeline run tests as required
