--- a/conf/test_sourmash_search.config
+++ b/conf/test_sourmash_search.config
@@ -15,8 +15,8 @@ params {
   max_memory = 6.GB
   max_time = 48.h
   // Input data
-  hashes = 'https://github.com/czbiohub/test-datasets/raw/olgabot/predictorthologs-hash2kmer/testdata/liver_unaligned__hashes.txt'
-  csv = 'https://github.com/czbiohub/test-datasets/raw/olgabot/predictorthologs-hash2kmer/testdata/liver_unaligned__samples.csv'
+  hashes = 'https://github.com/czbiohub/test-datasets/raw/predictorthologs/testdata/liver_unaligned__hashes.txt'
+  csv = 'https://raw.githubusercontent.com/czbiohub/test-datasets/predictorthologs/testdata/liver_unaligned__samples.csv'
   sourmash_molecule = 'dayhoff'
   sourmash_ksize = 45
 
