--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,31 +44,31 @@ jobs:
           # TODO nf-core: You can customise CI pipeline run tests as required
           # (eg. adding multiple test runs with different parameters)
           ${NXF_RUN} ${GITHUB_WORKSPACE} -profile test_bam,docker
-      # - name: Test input is protein
-      #   run: |
-      #     # TODO nf-core: You can customise CI pipeline run tests as required
-      #     # (eg. adding multiple test runs with different parameters)
-      #     ${NXF_RUN} ${GITHUB_WORKSPACE} -profile test_input_is_protein,docker
-      # - name: Test hash2kmer
-      #   run: |
-      #     # TODO nf-core: You can customise CI pipeline run tests as required
-      #     # (eg. adding multiple test runs with different parameters)
-      #     ${NXF_RUN} ${GITHUB_WORKSPACE} -profile test_hash2kmer,docker
-      # - name: Test differential hash expression
-      #   run: |
-      #     # TODO nf-core: You can customise CI pipeline run tests as required
-      #     # (eg. adding multiple test runs with different parameters)
-      #     ${NXF_RUN} ${GITHUB_WORKSPACE} -profile test_diff_hash,docker
+      - name: Test input is protein
+        run: |
+          # TODO nf-core: You can customise CI pipeline run tests as required
+          # (eg. adding multiple test runs with different parameters)
+          ${NXF_RUN} ${GITHUB_WORKSPACE} -profile test_input_is_protein,docker
+      - name: Test hash2kmer
+        run: |
+          # TODO nf-core: You can customise CI pipeline run tests as required
+          # (eg. adding multiple test runs with different parameters)
+          ${NXF_RUN} ${GITHUB_WORKSPACE} -profile test_hash2kmer,docker
+      - name: Test differential hash expression
+        run: |
+          # TODO nf-core: You can customise CI pipeline run tests as required
+          # (eg. adding multiple test runs with different parameters)
+          ${NXF_RUN} ${GITHUB_WORKSPACE} -profile test_diff_hash,docker
       - name: Test differential hash expression with abundance
         run: |
           # TODO nf-core: You can customise CI pipeline run tests as required
           # (eg. adding multiple test runs with different parameters)
           ${NXF_RUN} ${GITHUB_WORKSPACE} -profile test_diff_hash,docker --with_abundance
-      # - name: Test sourmash search
-      #   run: |
-      #     # TODO nf-core: You can customise CI pipeline run tests as required
-      #     # (eg. adding multiple test runs with different parameters)
-      #     ${NXF_RUN} ${GITHUB_WORKSPACE} -profile test_sourmash_search,docker
+      - name: Test sourmash search
+        run: |
+          # TODO nf-core: You can customise CI pipeline run tests as required
+          # (eg. adding multiple test runs with different parameters)
+          ${NXF_RUN} ${GITHUB_WORKSPACE} -profile test_sourmash_search,docker
       - name: Test sourmash search with differential hash expression
         run: |
           # TODO nf-core: You can customise CI pipeline run tests as required
