--- a/conf/test_diff_hash_is_aligned.config
+++ b/conf/test_diff_hash_is_aligned.config
@@ -32,7 +32,7 @@ params {
   sourmash_log2_sketch_size = 14
 
   // CSV has aligned/unaligned signatures
-  csv_has_is_aligned = true
+  csv_has_is_aligned_col = true
 
   proteome_search_fasta = 'https://github.com/czbiohub/test-datasets/raw/predictorthologs/reference/ncbi_refseq_vertebrate_mammalian_ptprc_plus__np_only.fasta'
 }
