--- a/conf/test_diff_hash_filter_bam_hashes.config
+++ b/conf/test_diff_hash_filter_bam_hashes.config
@@ -11,30 +11,30 @@ params {
   config_profile_name = 'Test profile'
   config_profile_description = 'Minimal test dataset to check pipeline function'
   // Limit resources so that this can run on Travis
-  // max_cpus = 2
-  // max_memory = 6.GB
-  // max_time = 48.h
+  max_cpus = 2
+  max_memory = 6.GB
+  max_time = 48.h
   // Input data
   csv = 'https://github.com/czbiohub/test-datasets/raw/olgabot/predictorthologs--orthology-featurecounts/testdata/samples__hashes_in_bams_featurecounts_orthology__github_paths.csv'
   input_is_protein = true
 
   // Differential hash expression options
   diff_hash_expression = true
-  diff_hash_inverse_regularization_strength = 0.5  // Use larger number for testing, for less regularization on this small dataset
+  diff_hash_inverse_regularization_strength = 1  // Use larger number for testing, for less regularization on this small dataset
   diff_hash_solver = 'liblinear'  // Use simpler model for testing
-  diff_hash_penalty = 'l1'
+  diff_hash_penalty = 'l2'
   diff_hash_with_abundance = true
 
   // sourmash parameters
   protein_searcher = 'sourmash'
-  sourmash_molecule = 'dayhoff'
-  sourmash_ksize = 45
-  sourmash_log2_sketch_size = 14
+  sourmash_molecule = 'protein'
+  sourmash_ksize = 9
+  sourmash_log2_sketch_size = 4
 
   // Filter bam hashes options
   filter_bam_hashes = true
 
-  // Protein fasta is 453 B
-  proteome_search_fasta = '/home/olga/data_lg/czbiohub-reference/ncbi/refseq/releases/refseq-release98-2020-02-06/vertebrate_mammalian/vertebrate_mammalian_concatenated__np_only.faa.gz'
+  proteome_search_fasta = 'https://github.com/czbiohub/test-datasets/raw/predictorthologs/reference/ncbi_refseq_vertebrate_mammalian_ptprc_plus__np_only.fasta'
+  // proteome_search_fasta = '/home/olga/data_lg/czbiohub-reference/ncbi/refseq/releases/refseq-release98-2020-02-06/vertebrate_mammalian/vertebrate_mammalian_concatenated__np_only.faa.gz'
   // diamond_database = 'https://github.com/czbiohub/test-datasets/raw/predictorthologs/reference/ncbi_refseq_vertebrate_mammalian_ptprc_db.dmnd'
 }
