--- a/nextflow.config
+++ b/nextflow.config
@@ -41,9 +41,15 @@ params {
   translate_jaccard_threshold = 0.95
   translate_peptide_ksize = 9
 
-  // Orthology featurecounts Options
+  // Read Counting -- Orthology featurecounts Options
+  fc_extra_attributes = 'gene_name'
+  fc_group_features = 'gene_id'
+  fc_count_type = 'exon'
   fc_orthology_features_type = 'orthology_type'
   skiporthologyQC = false
+  forwardStranded = false
+  reverseStranded = false
+  unStranded = true
 
   // --- Protein search parameters ---
   proteome_search_fasta = false
