--- a/environment.yml
+++ b/environment.yml
@@ -34,5 +34,6 @@ dependencies:
   - subread=1.6.4
   - bioawk=1.0
   - conda-forge::ripgrep=12.0.1
+  - csvtk=0.20.0
   - pip:
     - git+https://github.com/czbiohub/sencha.git@master#egg=sencha
