--- a/conf/test_diff_hash_filter_bam_hashes.config
+++ b/conf/test_diff_hash_filter_bam_hashes.config
@@ -15,7 +15,7 @@ params {
   max_memory = 6.GB
   max_time = 48.h
   // Input data
-  csv = 'https://github.com/czbiohub/test-datasets/raw/olgabot/predictorthologs--orthology-featurecounts/testdata/samples__hashes_in_bams_featurecounts_orthology__github_paths.csv'
+  csv = 'https://github.com/czbiohub/test-datasets/raw/olgabot/predictorthologs--orthology-featurecounts/testdata/featurecounts/samples_cleaned_for_github_v2.csv'
   input_is_protein = true
 
   // Differential hash expression options
@@ -28,13 +28,13 @@ params {
   // sourmash parameters
   protein_searcher = 'sourmash'
   sourmash_molecule = 'protein'
-  sourmash_ksize = 9
-  sourmash_log2_sketch_size = 4
+  sourmash_ksize = 27
+  // sourmash_log2_sketch_size = 4
 
   // Filter bam hashes options
   filter_bam_hashes = true
 
-  proteome_search_fasta = 'https://github.com/czbiohub/test-datasets/raw/predictorthologs/reference/ncbi_refseq_vertebrate_mammalian_ptprc_plus__np_only.fasta'
+  proteome_search_fasta = 'https://github.com/czbiohub/test-datasets/raw/olgabot/predictorthologs--orthology-featurecounts/testdata/featurecounts/proteome_to_search.fasta'
   // proteome_search_fasta = '/home/olga/data_lg/czbiohub-reference/ncbi/refseq/releases/refseq-release98-2020-02-06/vertebrate_mammalian/vertebrate_mammalian_concatenated__np_only.faa.gz'
   // diamond_database = 'https://github.com/czbiohub/test-datasets/raw/predictorthologs/reference/ncbi_refseq_vertebrate_mammalian_ptprc_db.dmnd'
 }
