--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,56 +26,37 @@ jobs:
           docker pull czbiohub/predictorthologs:dev && docker tag czbiohub/predictorthologs:dev czbiohub/predictorthologs:dev
       - name: Run pipeline with test data (single-end fastq input)
         run: |
-          # TODO nf-core: You can customise CI pipeline run tests as required
-          # (eg. adding multiple test runs with different parameters)
           ${NXF_RUN} ${GITHUB_WORKSPACE} -profile test_fastq,docker
       - name: Test downloading refseq
         run: |
-          # TODO nf-core: You can customise CI pipeline run tests as required
-          # (eg. adding multiple test runs with different parameters)
           ${NXF_RUN} ${GITHUB_WORKSPACE} -profile test_download_refseq,docker
       - name: Test using existing database
         run: |
-          # TODO nf-core: You can customise CI pipeline run tests as required
-          # (eg. adding multiple test runs with different parameters)
           ${NXF_RUN} ${GITHUB_WORKSPACE} -profile test_existing_database,docker
       - name: Test bam
         run: |
-          # TODO nf-core: You can customise CI pipeline run tests as required
-          # (eg. adding multiple test runs with different parameters)
           ${NXF_RUN} ${GITHUB_WORKSPACE} -profile test_bam,docker
       - name: Test input is protein
         run: |
-          # TODO nf-core: You can customise CI pipeline run tests as required
-          # (eg. adding multiple test runs with different parameters)
           ${NXF_RUN} ${GITHUB_WORKSPACE} -profile test_input_is_protein,docker
       - name: Test hash2kmer
         run: |
-          # TODO nf-core: You can customise CI pipeline run tests as required
-          # (eg. adding multiple test runs with different parameters)
           ${NXF_RUN} ${GITHUB_WORKSPACE} -profile test_hash2kmer,docker
       - name: Test differential hash expression
         run: |
-          # TODO nf-core: You can customise CI pipeline run tests as required
-          # (eg. adding multiple test runs with different parameters)
           ${NXF_RUN} ${GITHUB_WORKSPACE} -profile test_diff_hash,docker
       - name: Test differential hash expression with abundance
         run: |
-          # TODO nf-core: You can customise CI pipeline run tests as required
-          # (eg. adding multiple test runs with different parameters)
           ${NXF_RUN} ${GITHUB_WORKSPACE} -profile test_diff_hash,docker --with_abundance
       - name: Test sourmash search
         run: |
-          # TODO nf-core: You can customise CI pipeline run tests as required
-          # (eg. adding multiple test runs with different parameters)
           ${NXF_RUN} ${GITHUB_WORKSPACE} -profile test_sourmash_search,docker
       - name: Test sourmash search with differential hash expression
         run: |
-          # TODO nf-core: You can customise CI pipeline run tests as required
-          # (eg. adding multiple test runs with different parameters)
           ${NXF_RUN} ${GITHUB_WORKSPACE} -profile test_diff_hash_sourmash,docker
       - name: Test differential hash, only searching sourmash for unaligned hashes
         run: |
-          # TODO nf-core: You can customise CI pipeline run tests as required
-          # (eg. adding multiple test runs with different parameters)
           ${NXF_RUN} ${GITHUB_WORKSPACE} -profile test_diff_hash_is_aligned,docker
+      - name: Test differential hash, filter bam for hashes and do featureCounts
+        run: |
+          ${NXF_RUN} ${GITHUB_WORKSPACE} -profile test_diff_hash_filter_bam_hashes,docker
