Add Infernal for RNA search to dependencies
Beginning of https://github.com/czbiohub/nf-predictorthologs/issues/22 ...

--- a/environment.yml
+++ b/environment.yml
@@ -35,5 +35,6 @@ dependencies:
   - bioawk=1.0
   - conda-forge::ripgrep=12.0.1
   - csvtk=0.20.0
+  - infernal=1.1.2
   - pip:
     - git+https://github.com/czbiohub/sencha.git@master#egg=sencha
