--- a/conf/base.config
+++ b/conf/base.config
@@ -26,6 +26,9 @@ process {
   //        adding in your processes.
   // TODO nf-core: Customise requirements for specific processes.
   // See https://www.nextflow.io/docs/latest/config.html#config-process-selectors
+  withLabel:cpus_2 {
+     cpus = {check_resource(2)}
+  }
   withLabel:process_low {
     cpus = { check_max( 1 * task.attempt, 'cpus' ) }
     memory = { check_max( 14.GB * task.attempt, 'memory' ) }
