--- a/conf/base.config
+++ b/conf/base.config
@@ -27,7 +27,7 @@ process {
   // TODO nf-core: Customise requirements for specific processes.
   // See https://www.nextflow.io/docs/latest/config.html#config-process-selectors
   withLabel:cpus_2 {
-     cpus = {check_resource(2)}
+     cpus = { check_max( 2 * task.attempt, 'memory' ) }
   }
   withLabel:process_low {
     cpus = { check_max( 1 * task.attempt, 'cpus' ) }
