--- a/nextflow.config
+++ b/nextflow.config
@@ -39,6 +39,7 @@ params {
   translate_peptide_molecule = "protein"
   // UNIPROT human proteome is default reference. Human has Taxon ID 9606
   proteome_translate_fasta = "ftp://ftp.uniprot.org/pub/databases/uniprot/current_release/knowledgebase/reference_proteomes/Eukaryota/UP000005640_9606.fasta.gz"
+  translate_tablesize = '1e8'
   translate_jaccard_threshold = 0.95
   translate_peptide_ksize = 9
 
