--- a/conf/base.config
+++ b/conf/base.config
@@ -50,6 +50,7 @@ process {
     time = { check_max( 16.h * task.attempt, 'time' ) }
   }
   withLabel:process_long {
+    memory = { check_max( 14.GB * task.attempt, 'memory' ) }
     time = { check_max( 20.h * task.attempt, 'time' ) }
   }
   withName:'multiqc|get_software_versions' {
