--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,12 +5,12 @@ on: [push, pull_request]
 
 jobs:
   test:
-    continue-on-error: ${{ matrix.allow_failure }}
     env:
       NXF_VER: ${{ matrix.nxf_ver }}
       NXF_ANSI_LOG: false
       NXF_RUN: "nextflow run -resume"
     runs-on: ubuntu-latest
+    continue-on-error: ${{ matrix.allow_failure }}
     strategy:
       matrix:
         # Nextflow versions: check pipeline minimum and current latest
@@ -31,6 +31,7 @@ jobs:
           # TODO nf-core: You can customise CI pipeline run tests as required
           # (eg. adding multiple test runs with different parameters)
           ${NXF_RUN} ${GITHUB_WORKSPACE} -profile test_fastq,docker
+      # NCBI Server is not reliable, so allow failure here
       - name: Test downloading refseq
         run: |
           # TODO nf-core: You can customise CI pipeline run tests as required
