--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,12 +10,12 @@ jobs:
       NXF_ANSI_LOG: false
       NXF_RUN: "nextflow run -resume"
     runs-on: ubuntu-latest
-    continue-on-error: ${{ matrix.allow_failure }}
+    continue-on-error: ${{ matrix.experimental }}
     strategy:
       matrix:
         # Nextflow versions: check pipeline minimum and current latest
         nxf_ver: ['19.10.0', '']
-        allow_failure: [false]
+        experimental: [false]
     steps:
       - uses: actions/checkout@v2
       - name: Install Nextflow
@@ -33,11 +33,11 @@ jobs:
           ${NXF_RUN} ${GITHUB_WORKSPACE} -profile test_fastq,docker
       # NCBI Server is not reliable, so allow failure here
       - name: Test downloading refseq
+        experimental: true
         run: |
           # TODO nf-core: You can customise CI pipeline run tests as required
           # (eg. adding multiple test runs with different parameters)
           ${NXF_RUN} ${GITHUB_WORKSPACE} -profile test_download_refseq,docker
-        allow_failure: true
       - name: Test using existing database
         run: |
           # TODO nf-core: You can customise CI pipeline run tests as required
