--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,12 @@ jobs:
         # Nextflow versions: check pipeline minimum and current latest
         nxf_ver: ['19.10.0', '']
         experimental: [false]
+        profile_flags: ['test_fastq', 'test_download_refseq',
+        'test_existing_database', 'test_bam', 'test_bam --search_noncoding',
+        'test_input_is_protein', 'test_hash2kmer', 'test_diff_hash',
+        'test_diff_hash --with_abundance', 'test_sourmash_search',
+        'test_diff_hash_sourmash', 'test_diff_hash_is_aligned'
+        ]
     steps:
       - uses: actions/checkout@v2
       - name: Install Nextflow
@@ -30,61 +36,4 @@ jobs:
         run: |
           # TODO nf-core: You can customise CI pipeline run tests as required
           # (eg. adding multiple test runs with different parameters)
-          ${NXF_RUN} ${GITHUB_WORKSPACE} -profile test_fastq,docker
-      # NCBI Server is not reliable, so allow failure here
-      - name: Test downloading refseq
-        experimental: true
-        run: |
-          # TODO nf-core: You can customise CI pipeline run tests as required
-          # (eg. adding multiple test runs with different parameters)
-          ${NXF_RUN} ${GITHUB_WORKSPACE} -profile test_download_refseq,docker
-      - name: Test using existing database
-        run: |
-          # TODO nf-core: You can customise CI pipeline run tests as required
-          # (eg. adding multiple test runs with different parameters)
-          ${NXF_RUN} ${GITHUB_WORKSPACE} -profile test_existing_database,docker
-      - name: Test bam
-        run: |
-          # TODO nf-core: You can customise CI pipeline run tests as required
-          # (eg. adding multiple test runs with different parameters)
-          ${NXF_RUN} ${GITHUB_WORKSPACE} -profile test_bam,docker
-      - name: Test bam, search noncoding
-        run: |
-          # TODO nf-core: You can customise CI pipeline run tests as required
-          # (eg. adding multiple test runs with different parameters)
-          ${NXF_RUN} ${GITHUB_WORKSPACE} -profile test_bam,docker --search_noncoding
-      - name: Test input is protein
-        run: |
-          # TODO nf-core: You can customise CI pipeline run tests as required
-          # (eg. adding multiple test runs with different parameters)
-          ${NXF_RUN} ${GITHUB_WORKSPACE} -profile test_input_is_protein,docker
-      - name: Test hash2kmer
-        run: |
-          # TODO nf-core: You can customise CI pipeline run tests as required
-          # (eg. adding multiple test runs with different parameters)
-          ${NXF_RUN} ${GITHUB_WORKSPACE} -profile test_hash2kmer,docker
-      - name: Test differential hash expression
-        run: |
-          # TODO nf-core: You can customise CI pipeline run tests as required
-          # (eg. adding multiple test runs with different parameters)
-          ${NXF_RUN} ${GITHUB_WORKSPACE} -profile test_diff_hash,docker
-      - name: Test differential hash expression with abundance
-        run: |
-          # TODO nf-core: You can customise CI pipeline run tests as required
-          # (eg. adding multiple test runs with different parameters)
-          ${NXF_RUN} ${GITHUB_WORKSPACE} -profile test_diff_hash,docker --with_abundance
-      - name: Test sourmash search
-        run: |
-          # TODO nf-core: You can customise CI pipeline run tests as required
-          # (eg. adding multiple test runs with different parameters)
-          ${NXF_RUN} ${GITHUB_WORKSPACE} -profile test_sourmash_search,docker
-      - name: Test sourmash search with differential hash expression
-        run: |
-          # TODO nf-core: You can customise CI pipeline run tests as required
-          # (eg. adding multiple test runs with different parameters)
-          ${NXF_RUN} ${GITHUB_WORKSPACE} -profile test_diff_hash_sourmash,docker
-      - name: Test differential hash, only searching sourmash for unaligned hashes
-        run: |
-          # TODO nf-core: You can customise CI pipeline run tests as required
-          # (eg. adding multiple test runs with different parameters)
-          ${NXF_RUN} ${GITHUB_WORKSPACE} -profile test_diff_hash_is_aligned,docker
+          ${NXF_RUN} ${GITHUB_WORKSPACE} -profile docker,${{ matrix.profile_flags }}
