--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,11 +14,19 @@ jobs:
       matrix:
         # Nextflow versions: check pipeline minimum and current latest
         nxf_ver: ['19.10.0', '']
-        profile_flags: ['test_fastq', 'test_download_refseq',
-        'test_existing_database', 'test_bam', 'test_bam --search_noncoding',
-        'test_input_is_protein', 'test_hash2kmer', 'test_diff_hash',
-        'test_diff_hash --with_abundance', 'test_sourmash_search',
-        'test_diff_hash_sourmash', 'test_diff_hash_is_aligned'
+        profile_flags: [
+        'test_bam',
+        'test_bam --search_noncoding',
+        'test_diff_hash',
+        'test_diff_hash --with_abundance',
+        'test_diff_hash_sourmash',
+        'test_diff_hash_is_aligned'
+        'test_download_refseq',
+        'test_existing_database',
+        'test_fastq',
+        'test_hash2kmer',
+        'test_input_is_protein',
+        'test_sourmash_search',
         ]
     steps:
       - uses: actions/checkout@v2
