--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
         'test_diff_hash',
         'test_diff_hash --with_abundance',
         'test_diff_hash_sourmash',
-        'test_diff_hash_is_aligned'
+        'test_diff_hash_is_aligned',
         'test_download_refseq',
         'test_existing_database',
         'test_fastq',
