--- a/conf/test_diff_hash.config
+++ b/conf/test_diff_hash.config
@@ -17,7 +17,8 @@ params {
   // Input data
   csv = 'https://github.com/czbiohub/test-datasets/raw/pranathi-predictorthologs-csv-correction/testdata/diff-hash/samples3.csv'
   input_is_protein = true
-
+  sourmash_molecule = 'dayhoff'
+  sourmash_ksize = 45
   // Differential hash expression options
   diff_hash_expression = true
   diff_hash_inverse_regularization_strength = 0.5  // Use larger number for testing, for less regularization on this small dataset
