--- a/conf/test_diff_hash_sourmash.config
+++ b/conf/test_diff_hash_sourmash.config
@@ -16,7 +16,8 @@ params {
   max_time = 48.h
   // Input data
   csv = 'https://github.com/czbiohub/test-datasets/raw/pranathi-predictorthologs-csv-correction/testdata/diff-hash/samples3.csv'
-
+  sourmash_molecule = 'dayhoff'
+  sourmash_ksize = 45
   input_is_protein = true
 
   // Differential hash expression options
