--- a/conf/test_hash2kmer.config
+++ b/conf/test_hash2kmer.config
@@ -18,7 +18,8 @@ params {
   hashes = 'https://github.com/czbiohub/test-datasets/raw/pranathi-predictorthologs-csv-correction/testdata/liver_unaligned__hashes.txt'
   csv = 'https://github.com/czbiohub/test-datasets/raw/pranathi-predictorthologs-csv-correction/testdata/liver_unaligned__samples.csv'
   input_is_protein = true
-
+  sourmash_molecule = 'dayhoff'
+  sourmash_ksize = 45
   proteome_search_fasta = 'https://github.com/czbiohub/test-datasets/raw/pranathi-predictorthologs-csv-correction/reference/ncbi_refseq_vertebrate_mammalian_ptprc_plus__np_only.fasta'
   diamond_refseq_release = false
   diamond_taxonmap_gz = "https://github.com/czbiohub/test-datasets/raw/pranathi-predictorthologs-csv-correction/reference/prot.accession2taxid.vertebrate_mammalian_ptprc.with_header.txt.gz"
