--- a/conf/test_sourmash_search.config
+++ b/conf/test_sourmash_search.config
@@ -17,6 +17,8 @@ params {
   // Input data
   hashes = 'https://github.com/czbiohub/test-datasets/raw/pranathi-predictorthologs-csv-correction/testdata/liver_unaligned__hashes.txt'
   csv = 'https://raw.githubusercontent.com/czbiohub/test-datasets/pranathi-predictorthologs-csv-correction/testdata/liver_unaligned__samples.csv'
+  sourmash_molecule = 'dayhoff'
+  sourmash_ksize = 45
 
   input_is_protein = true
   protein_searcher = 'sourmash'
