--- a/nextflow.config
+++ b/nextflow.config
@@ -54,7 +54,9 @@ params {
   // Sourmash options
   sourmash_index = false  // pre-built sequence bloom tree index
   hashes = false
-
+  sourmash_ksize = false
+  sourmash_molecule = false
+  
   // Use all of manually curated, verified UniProt/SwissProt as the reference proteome for searching for orthologs
   diamond_database = false
   // valid terms from ftp://ftp.ncbi.nlm.nih.gov/refseq/release/
