added sambamba processes for deduplication and index
Co-authored-by: Olga Botvinnik <olga.botvinnik@czbiohub.org>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,7 @@ jobs:
         nxf_ver: ['19.10.0', '']
         profile_flags: [
         'test_bam',
+        'test_sambamba',
         'test_bam --search_noncoding',
         'test_diff_hash',
         'test_diff_hash --with_abundance',
