--- a/nextflow.config
+++ b/nextflow.config
@@ -153,6 +153,7 @@ profiles {
   test_input_is_protein { includeConfig 'conf/test_input_is_protein.config' }
   test_csv { includeConfig 'conf/test_csv.config' }
   test_sourmash_search { includeConfig 'conf/test_sourmash_search.config' }
+  test_sambamba { includeConfig 'conf/test_sambamba.config' }
 }
 
 // Load igenomes.config if required
