--- a/conf/test_sambamba.config
+++ b/conf/test_sambamba.config
@@ -19,6 +19,7 @@ params {
   single_end = true
   proteome_translate_fasta = 'https://raw.githubusercontent.com/czbiohub/test-datasets/predictorthologs/reference/ncbi_refseq_vertebrate_mammalian_ptprc_plus__np_only.fasta'
   translate_peptide_molecule = 'dayhoff'
+  translate_peptide_ksize = '9,12'
   skip_remove_duplicates_bam = false
   proteome_search_fasta = 'https://github.com/czbiohub/test-datasets/raw/predictorthologs/reference/ncbi_refseq_vertebrate_mammalian_ptprc_plus__np_only.fasta'
   diamond_refseq_release = false
