--- a/conf/test_sencha.config
+++ b/conf/test_sencha.config
@@ -1,6 +1,6 @@
 /*
  * -------------------------------------------------------------------
- *  Nextflow config file for running tests with sambamba
+ *  Nextflow config file for running tests for sench index and sencha translate
  * -----------------------------------------------------------------------
  * Defines bundled input files and everything required
  * to run a fast and simple test. Use as follows:
@@ -18,8 +18,8 @@ params {
   bam = "https://github.com/czbiohub/test-datasets/raw/predictorthologs/testdata/SRR306792_GSM752645_ppy_br_M_1_1Aligned.sortedByCoord.out.ptprc_subset.bam"  
   single_end = true
   proteome_translate_fasta = 'https://raw.githubusercontent.com/czbiohub/test-datasets/predictorthologs/reference/ncbi_refseq_vertebrate_mammalian_ptprc_plus__np_only.fasta'
-  translate_peptide_molecule = 'dayhoff'
-  translate_peptide_ksize = '9'
+  translate_peptide_molecule = 'dayhoff,protein'
+  translate_peptide_ksize = '9,12'
   skip_remove_duplicates_bam = false
   proteome_search_fasta = 'https://github.com/czbiohub/test-datasets/raw/predictorthologs/reference/ncbi_refseq_vertebrate_mammalian_ptprc_plus__np_only.fasta'
   diamond_refseq_release = false
