--- a/nextflow.config
+++ b/nextflow.config
@@ -154,6 +154,7 @@ profiles {
   test_csv { includeConfig 'conf/test_csv.config' }
   test_sourmash_search { includeConfig 'conf/test_sourmash_search.config' }
   test_sambamba { includeConfig 'conf/test_sambamba.config' }
+  test_sencha { includeConfig 'conf/test_sencha.config'}
 }
 
 // Load igenomes.config if required
