--- a/nextflow.config
+++ b/nextflow.config
@@ -142,6 +142,7 @@ profiles {
     singularity.autoMounts = true
   }
   test_fastq { includeConfig 'conf/test_fastq.config' }
+  test_fastq_paired { includeConfig 'conf/test_fastq_paired.config' }
   test_bam { includeConfig 'conf/test_bam.config' }
   test_diff_hash { includeConfig 'conf/test_diff_hash.config' }
   test_diff_hash_abundance { includeConfig 'conf/test_diff_hash_abundance.config' }
