--- a/.github/workflows/ci_download_refseq.yml
+++ b/.github/workflows/ci_download_refseq.yml
@@ -5,7 +5,7 @@ on: [push, pull_request]
 
 jobs:
   test:
-    continue-on-error: []
+    continue-on-error: true
     env:
       NXF_VER: ${{ matrix.nxf_ver }}
       NXF_ANSI_LOG: false
@@ -17,19 +17,7 @@ jobs:
         # Nextflow versions: check pipeline minimum and current latest
         nxf_ver: ['19.10.0', '']
         profile_flags: [
-        'test_bam',
-        'test_sambamba',
-        'test_bam --search_noncoding',
-        'test_diff_hash',
-        'test_diff_hash --with_abundance',
-        'test_diff_hash_sourmash',
-        'test_diff_hash_is_aligned',
-        'test_download_refseq',
-        'test_existing_database',
-        'test_fastq',
-        'test_hash2kmer',
-        'test_input_is_protein',
-        'test_sourmash_search',
+        'test_download_refseq'
         ]
     steps:
       - uses: actions/checkout@v2
