--- a/.github/workflows/ci_download_refseq.yml
+++ b/.github/workflows/ci_download_refseq.yml
@@ -1,4 +1,4 @@
-name: nf-core CI
+name: nf-core CI - download refseq (allowed to fail)
 # This workflow is triggered on pushes and PRs to the repository.
 # It runs the pipeline with the minimal test dataset to check that it completes without any syntax errors
 on: [push, pull_request]
