Add comment explaining separate download refseq

--- a/.github/workflows/ci_download_refseq.yml
+++ b/.github/workflows/ci_download_refseq.yml
@@ -1,6 +1,8 @@
 name: nf-core CI - download refseq (allowed to fail)
 # This workflow is triggered on pushes and PRs to the repository.
-# It runs the pipeline with the minimal test dataset to check that it completes without any syntax errors
+# This workflow runs a test of downloading the proteome database "other" from
+# NCBI RefSeq but this often fails due to connection errors so this test is
+# separated out from the rest of ci.yml
 on: [push, pull_request]
 
 jobs:
